<resources>
    <string name="google_maps_key_b" translatable="false" templateMergeStrategy="preserve">
        AIzaSyBhK7f_n_9sqJ3rbqJlFiyqKu_9P0VJQ6o
    </string>
    <string name="google_maps_key_h" translatable="false" templateMergeStrategy="preserve">
         AIzaSyA5bKVTM8ENuNE0a7PIKyVSu08K0ZjQWws
    </string>
    <string name="google_app_id">964696897480</string>
    <string name="title_activity_maps">Maps</string>


    <string name="app_name">Gloobar App</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="action_booking">Booking</string>
    <string name="action_cancel_booking">Cancel</string>
    <string name="action_chat">Chat</string>
    <string name="action_show_profile">Show Profile</string>
    <string name="action_show_my_conversations">My conversations</string>
    <string name="action_save">Save</string>
    <string name="booking_data">Date</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="booking_count">Count</string>
    <string name="action_next">next</string>
    <string name="favorit">Favorits</string>
    <string name="LocaleType">Type</string>
    <string name="LocaleSpecializing">Specializing</string>
    <string name="LocaleHasChat">Chat</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="radius">Radius</string>
    <string name="chat">Chat</string>

    // Activity Titles
    <string name="title_activity_search_locale">SEARCH in Gloobar system</string>
    <string name="title_activity_booking">Booking</string>
    <string name="title_activity_map_list">Rooms</string>
    <string name="title_activity_beacon_list">BeaconListActivity</string>
    <string name="title_activity_search_locale_result">Locales</string>

    <string name="hello_world">Hello world!</string>
    <string name="Next">Next</string>
    <string name="title_activity_booking_history">BookingHistory</string>
    <string name="title_activity_chat">Chat</string>
    <string name="search_room">search</string>
    <string name="title_activity_app_settings">Settings</string>

    <string-array name="booking_count_arrays">
        <item>1</item>
        <item>2 States</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="radius_count_arrays">
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string-array name="countries_array">
        <item>China</item>
        <item>India</item>
        <item>USA</item>
        <item>Indonesia</item>
        <item>Brazil</item>
        <item>Pakistan</item>
        <item>Nigeria</item>
        <item>Bangladesh</item>
        <item>Russia</item>
        <item>Russia</item>
        <item>Russia</item>
        <item>Russia</item>
        <item>Russia</item>
        <item>Russia</item>
        <item>Russia</item>
        <item>Russia</item>
        <item>Russia</item>
        <item>China</item>
        <item>India</item>
        <item>USA</item>
        <item>Indonesia</item>
        <item>Brazil</item>
        <item>Pakistan</item>
        <item>Nigeria</item>
        <item>Bangladesh</item>
        <item>China</item>
        <item>India</item>
        <item>USA</item>
        <item>Indonesia</item>
        <item>Brazil</item>
        <item>Pakistan</item>
        <item>Nigeria</item>
        <item>Bangladesh</item>
    </string-array>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_booking_table">BookingTableActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_actor_profile">ActorProfileActivity</string>


</resources>
