<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SearchLocaleActivity">

    <include layout="@xml/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/list_padding">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name" />

        <Spinner
            android:id="@+id/spnLocaleName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/menu"
            android:spinnerMode="dropdown"
            style="@style/Widget.AppCompat.Spinner" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/city" />


        <Spinner
            android:id="@+id/spnCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/menu"
            android:spinnerMode="dropdown"
            style="@style/Widget.AppCompat.Spinner"
             />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/radius" />

        <Spinner
            android:id="@+id/spnRadius"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/menu" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/LocaleType" />

        <Spinner
            android:id="@+id/spnType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/menu"
            style="@style/Widget.AppCompat.Spinner"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/LocaleSpecializing" />

        <Spinner
            android:id="@+id/spnSpecializing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/menu"
            style="@style/Widget.AppCompat.Spinner"
            android:spinnerMode="dropdown" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chat"
            android:id="@+id/switchChat"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
</LinearLayout>